--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
             id="city-input"
             name="city-name"
             type="text"
-            value="Sibiu"
+            value=""
             placeholder="Write city name here"
          />
          <button class="form-btn" type="submit">Find</button>
       </form>
       <div class="card-section">
-         <div class="card"></div>
          <div class="card">
             <h3 class="card-name">Curtea de Arges</h3>
             <img class="card-image" src="icons/11n.png" alt="Weather Icon" />
@@ -32,7 +31,6 @@
             <p class="card-wind-speed">Wind speed: 4 m/s</p>
             <p class="card-wind-direction">Wind direction: 230&#176;</p>
          </div>
-         <div class="card"></div>
       </div>
    </body>
 </html>
