--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
          <button class="form-btn" type="submit">Find</button>
       </form>
       <div class="card-section">
-         <div class="card">
+         <!-- <div class="card">
             <h3 class="card-name">Curtea de Arges</h3>
             <img class="card-image" src="icons/11n.png" alt="Weather Icon" />
             <p class="card-description">Clouds, scattered clouds</p>
@@ -64,7 +64,7 @@
                   </svg>
                </button>
             </div>
-         </div>
+         </div> -->
       </div>
    </body>
 </html>
