--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
    <body>
       <h1>Weather App</h1>
       <form class="form" action="submit">
-         <label for="city-input" class="input-label">City name</label>
+         <label for="city-input" class="input-label">City</label>
          <input
             id="city-input"
             name="city-name"
             type="text"
             value=""
-            placeholder="Write city name here"
+            placeholder="Write a city name here"
          />
          <button class="form-btn" type="submit">Find</button>
       </form>
@@ -66,5 +66,6 @@
             </div>
          </div> -->
       </div>
+      <button class="clear-btn" type="button">Clear History</button>
    </body>
 </html>
